# tapir

./: CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  ldap_testdata.ldif  pyproject.toml  sonar-project.properties
docker/keycloak/: tapir.json
tapir/: settings.py  urls.py
tapir/accounts/: forms.py  middleware.py  models.py  urls.py  views.py
tapir/accounts/migrations/: 0001_initial.py  0002_auto_20210406_1339.py  0003_auto_20210406_1343.py  0004_auto_20210520_1352.py  0005_auto_20210607_1213.py  0006_use_phone_number_field.py  0007_auto_20210903_1609.py  0008_auto_20210909_0943.py  0009_auto_20211003_0941.py  0010_auto_20211015_0858.py  0011_auto_20220422_1152.py  0012_auto_20220911_1915.py
tapir/accounts/templates/accounts/: user_detail.html
tapir/accounts/templates/accounts/email/: welcome_email.html  welcome_email_subject.html
tapir/accounts/templates/registration/: login.html  password_update.html
tapir/accounts/tests/: test_standard_user_detail_page.py
tapir/accounts/tests/factories/: factories.py
tapir/api/: models.py  serializers.py  urls.py  views.py
tapir/coop/: config.py  forms.py  models.py  pdfs.py  urls.py
tapir/coop/migrations/: 0022_membership_fee_and_sepa_mandate.py  0023_rename_from_startnext_to_is_early_bird.py  0026_sepa_mandate_fields.py  0027_auto_20220422_1152.py  0028_incomingpayment.py  0029_auto_20220605_1200.py  0030_auto_20220617_1056.py
tapir/coop/static/coop/css/: membership_agreement_pdf.css
tapir/coop/templates/coop/: about.html  create_user_from_shareowner_form.html  draftuser_confirm_registration.html  draftuser_detail.html  draftuser_list.html  draftuser_register_form.default.html  draftuser_register_form.html  matching_program.html  membership_agreement_pdf.default.html  membership_agreement_pdf.html  membership_confirmation_pdf.default.html  membership_confirmation_pdf.html  shareowner_detail.html  shareowner_form.html  shareowner_list.html  statistics.html  tools_app.html  tools_chat.html  user_coop_share_ownership_list_tag.html  welcome_desk_search.html  welcome_desk_share_owner.html
tapir/coop/templates/coop/email/: membership_agreement.txt  (+5 more)
tapir/coop/tests/: test_member_list_filters.py  test_register_draft_user.py  tests_paid_share.py
tapir/coop/views/: draftuser.py  shareowner.py  statistics.py
tapir/core/templates/core/: base.html
tapir/core/templatetags/: core.py
tapir/core/tests/: test_project.py
tapir/log/: models.py
tapir/log/templates/log/: log_entry_list_tag.html
tapir/shifts/: forms.py  models.py
tapir/shifts/fixtures/: test_member_office_look_for_stand_in_and_replace.json  test_member_self_registers_to_shift.json  test_register_abcd_member_to_abcd_shift.json  test_shift_cycle_start.json
tapir/shifts/migrations/: 0032_shiftslot_warnings.py  0033_shiftslottemplate_warnings.py
tapir/shifts/templates/shifts/: cancel_shift.html  members_on_alert_list.html  register_user_to_shift_slot.html  register_user_to_shift_slot_template.html  shift_calendar_template.html  shift_detail.html  shift_form.html  shift_template_detail.html  shift_template_group_calendar.html  shift_template_overview.html  shiftexemption_list.html  shiftslot_form.html  statistics.html  user_shift_account_log.html  user_shifts_overview_tag.html
tapir/shifts/tests/: test_get_week_group.py
tapir/static/css/: custom.css
tapir/templates/: base.html
tapir/utils/: tests_utils.py
tapir/utils/fixtures/: test_data.json
tapir/utils/management/commands/: populate_functions.py
tapir/welcomedesk/templates/welcomedesk/: welcome_desk_share_owner.html
(+3 files in other folders)
