[tool.poetry]
name = "tapir"
version = "0.1.0"
description = ""
authors = ["Leon Handreke <leonh@ndreke.de>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "~3.2.15"
django-ldapdb = "^1.5.1"
django-weasyprint = "^2.1.0"
django-extensions = "^3.2.0"
django-bootstrap-datepicker-plus = "^4.0.0"
psycopg2 = "^2.9.3"
django-tables2 = "^2.4.1"
django-filter = "^22.1"
tablib = "^3.2.1"
django-phonenumber-field = "^6.3.0"
phonenumbers = "^8.12.51"
weasyprint = "^56.1"
django-select2 = "^7.10.0"
django-silk = "^4.4.1"
gunicorn = "^20.1.0"
django-environ = "^0.9.0"
django-bootstrap5 = "^21.3"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
django-cors-headers = "3.11.0"
celery = "^5.2.7"
redis = "^4.4.4"
ipython = "^8.4.0"
django-chartjs = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipython = "^8.4.0"
pre-commit = "^2.20.0"
Werkzeug = "^1.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.5"
selenium = "^4.3.0"
factory-boy = "^3.2.1"
poetryup = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
