[tool.poetry]
name = "tapir"
version = "0.1.0"
description = ""
authors = ["Leon Handreke <leonh@ndreke.de>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "~3.2.25"
django-ldapdb = "^1.5.1"
django-weasyprint = "^2.2.0"
django-extensions = "^3.2.3"
django-bootstrap-datepicker-plus = "^4.0.0"
psycopg2 = "^2.9.6"
django-tables2 = "^2.6.0"
django-filter = "^22.1"
tablib = "^3.5.0"
django-phonenumber-field = "^6.4.0"
phonenumbers = "^8.13.17"
weasyprint = "^56.1"
django-select2 = "^7.11.1"
django-silk = "^4.4.1"
gunicorn = "^22.0.0"
django-environ = "^0.9.0"
django-bootstrap5 = "^21.3"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "3.11.0"
celery = "^5.3.1"
redis = "^4.6.0"
ipython = "^8.14.0"
django-chartjs = "^2.3.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
ipython = "^8.14.0"
pre-commit = "^2.21.0"
Werkzeug = "^3.0.3"
pytest = "^7.4.0"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
pytest-sugar = "^0.9.7"
selenium = "^4.10.0"
factory-boy = "^3.3.0"
poetryup = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
